Fixes the item number overlapping issue

--- a/app/styles/_modules/_forms.scss
+++ b/app/styles/_modules/_forms.scss
@@ -32,7 +32,7 @@ form {
             text-align: center;
             font-size: em(18);
             font-weight: 900;
-            padding: 0 0 0 em(15);
+            padding: 0 0 0 em(10);
         }
 
         &:after {
